# dproc

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.in  README.md  TODO.md  build.rs  configure
.cargo/: config.toml
gui/: .gitignore  build.py  main.py
src/: coreFuncs.rs  deviate.rs  enumerate.rs  freq.rs  humans.rs  lib.rs  main.rs  math.rs  primes.rs  round.rs  sort.rs
src/num_integer/: mod.rs
src/utils/: csvext.rs  delext.rs  formatconv.rs  mod.rs  xlsxext.rs
tests/: test-csv.csv  test-delimit.txt
