[package]
name = "dproc"
version = "1.2.4"
authors = ["Matthew Yang <matthew.yang204@gmail.com>"]
edition = "2024"
description = "A basic CLI data processor, designed to be fed data and output data directly from the commandline"
license = "GPL-3.0-only"
repository = "https://github.com/matthewyang204/dproc"
documentation = "https://github.com/matthewyang204/dproc"
homepage = "https://github.com/matthewyang204/dproc"
readme = "README.md"

[dependencies]
num-integer = "0.1"
num-bigint = "0.4.6"
num-traits = "0.2"

[build-dependencies]
cc = "1.2.49"
